# wenqiao

./: .gitignore  Makefile  README.md  README_ZH.md  pyproject.toml
.claude/: review-loop.local.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/agents/: store.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/skills/: wenqiao-writer
.github/workflows/: ci.yml  publish.yml
docs/: md-mid-format-spec.md  wenqiao-format-spec.md
docs/plans/: 2026-03-02-phase2-rich-markdown.md  2026-03-02-phase3-table-lists-polish.md  2026-03-03-phase4-bug-fixes.md  2026-03-03-phase4-config-templates.md  2026-03-03-phase5-html-ai-figures.md  2026-03-04-full-project-review-fixes.md  2026-03-05-icp-survey.md  2026-03-05-preset-and-docs.md  2026-03-06-format-lint-rumdl.md  2026-03-06-generate-cmd-design.md  2026-03-08-bare-cite-ref-shortcuts-design.md  2026-03-08-bare-cite-ref-shortcuts.md  2026-03-08-placement-directives-design.md  2026-03-08-placement-directives.md  phase2-researcher-notes.md
docs/research/: phase3-codebase-analysis.md  phase3-review-report.md
examples/: .gitignore  .latexignore  icp-survey-outline.md  icp-survey.mid.md  icp.bib
examples/icp-survey/: ch1-intro.mid.md  ch2-background.mid.md  ch3-0-intro.mid.md  ch3-1-correspondence.mid.md  ch3-2-outlier.mid.md  ch3-3-convergence.mid.md  ch3-4-transform.mid.md  ch3-5-degeneracy.mid.md  ch3-6-global-init.mid.md  ch3-7-dl-icp.mid.md  ch3-8-optimization.mid.md  ch3-9-summary.mid.md  ch4-0-intro.mid.md  ch4-1-data-structure.mid.md  ch4-2-downsampling.mid.md  ch4-3-parallelism.mid.md  ch4-4-approx-nn.mid.md  ch4-5-summary.mid.md  ch5-0-intro.mid.md  ch5-1-motivation.mid.md  ch5-2-fpga.mid.md  ch5-3-asic.mid.md  ch5-4-pim.mid.md  ch5-5-codesign.mid.md  ch5-6-summary.mid.md  ch6-0-intro.mid.md  ch6-1-applications.mid.md  ch6-2-benchmarks.mid.md  ch6-3-comparison.mid.md  ch6-4-summary.mid.md  ch7-challenges.mid.md  ch8-conclusion.mid.md
skills/wenqiao-writer/: SKILL.md
src/md_mid/: __init__.py  __main__.py  bibtex.py  cli.py  comment.py  comment_env.py  config.py  diagnostic.py  format_cmd.py  genfig.py  genfig_openai.py  latex.py  markdown.py  nodes.py  parser.py  sanitize.py  url_check.py  validate.py
src/wenqiao/: __init__.py  __main__.py  ai_meta.py  api.py  bibtex.py  cli.py  comment.py  comment_env.py  config.py  diagnostic.py  escape.py  format_cmd.py  generate_cmd.py  genfig.py  genfig_openai.py  html.py  latex.py  latex_blocks.py  lint.py  markdown.py  markdown_blocks.py  nodes.py  parser.py  pipeline.py  sanitize.py  validate.py
tests/: conftest.py  test_api.py  test_cli.py  test_comment.py  test_config.py  test_diagnostic.py  test_e2e.py  test_escape.py  test_format.py  test_generate_cmd.py  test_genfig.py  test_genfig_async.py  test_genfig_openai.py  test_html.py  test_latex.py  test_lint.py  test_markdown.py  test_nodes.py  test_parser.py  test_url_check.py  test_validate.py
tests/fixtures/: cite_ref.mid.md  comments.mid.md  full_example.mid.md  heading_para.mid.md  math.mid.md  minimal.mid.md
