[project]
name = "academic-md2latex"
version = "0.1.0"
description = "md-mid: 学术写作中间格式与多目标转换工具"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "ruamel-yaml>=0.18",
    "click>=8.0",
]

[project.scripts]
md-mid = "md_mid.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md_mid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.15",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
mypy_path = "src"
strict = true
ignore_missing_imports = true
