[project]
name = "wenqiao"
version = "0.1.0"
description = "Wenqiao (文桥): Markdown as the canonical source for academic writing / 以 Markdown 为唯一真源的学术写作工具"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "ruamel-yaml>=0.18",
    "click>=8.0",
    "rumdl>=0.1.42",
]

[project.optional-dependencies]
figures = ["openai>=1.0", "tqdm>=4.0"]

[project.urls]
Homepage = "https://github.com/nerdneilsfield/wenqiao"
Repository = "https://github.com/nerdneilsfield/wenqiao"
Issues = "https://github.com/nerdneilsfield/wenqiao/issues"

[project.scripts]
wenqiao = "wenqiao.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wenqiao"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "LICENSE", "README.md", "README_ZH.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9", "mypy>=1.15"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
mypy_path = "src"
strict = true
ignore_missing_imports = true
